--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "MIX content type explorer",
+  "name": "mix-type",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
   "scripts": {
     "start": "webpack-dev-server"
   },
-  "author": "",
+  "author": "James Drummond",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "react-router-dom": "^4.1.1"
   }
